# simulator

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README
src/: .clang_complete  CMakeLists.txt
src/lib/exception/: CMakeLists.txt  exception.cpp  exception.hpp  throw.tpp  validate.tpp
src/lib/raster/: raster.tpp
src/lib/utility/: concatenate.tpp  enumerate.tpp
src/modules/celestial/: CMakeLists.txt  doxygen.tpp  moon.cpp  moon.hpp  planet.cpp  planet.hpp  sun.cpp  sun.hpp  universe.cpp  universe.hpp
src/modules/geometry/: CMakeLists.txt  cartesian.cpp  cartesian.hpp  doxygen.tpp  orbit.cpp  orbit.hpp  polar.cpp  polar.hpp  stream.cpp  stream.hpp
src/modules/grid/: CMakeLists.txt  circle.cpp  circle.hpp  doxygen.tpp  line.cpp  line.hpp  point.cpp  point.hpp  speed.csv  sphere.cpp  sphere.hpp  stream.cpp  stream.hpp  types.tpp
src/modules/grid/detail/: basic.cpp  basic.hpp  optimised.cpp  optimised.hpp  speed_line.cpp  template_lookup.cpp  template_lookup.hpp  template_multiplex.cpp  template_multiplex.hpp  vector.cpp  vector.hpp
src/modules/logger/: CMakeLists.txt  doxygen.tpp  logger.cpp  logger.hpp  module.cpp  module.hpp  severity.cpp  severity.hpp  state.cpp  state.hpp
src/modules/math/: CMakeLists.txt  doxygen.tpp  vector.tpp
src/modules/math/vector/: arithmetic.tpp  comparison.tpp  utility.tpp
src/modules/math/vector/detail/: arithmetic.tpp  comparison.tpp  utility.tpp
src/modules/simulation/: CMakeLists.txt  simulator.cpp  simulator.hpp
src/modules/simulation/detail/: moon.cpp  moon.hpp  state.cpp  state.hpp  sun.cpp  sun.hpp
src/modules/unit/: CMakeLists.txt  angle.tpp  doxygen.tpp  energy.tpp  length.tpp  ptree.tpp  quantity.tpp  time.tpp  types.tpp  unit.tpp  value.tpp
src/modules/unit/quantity/: arithmetic.tpp  comparison.tpp  stream.cpp  stream.hpp  trigonometry.tpp
src/simulator/: options.cpp  options.hpp  simulator.cpp
src/unit_test/: exception.cpp  exception.hpp  pointer.tpp  unit_test.cpp
src/unit_test/lib/utility/: concatenate.cpp
src/unit_test/modules/celestial/: moon.cpp  planet.cpp  sun.cpp
src/unit_test/modules/geometry/: coordinate.cpp  orbit.cpp
src/unit_test/modules/grid/: circle.cpp  line.cpp  point.cpp  sphere.cpp
src/unit_test/modules/logger/: logger.cpp  module.cpp
src/unit_test/modules/math/: vector.cpp
src/unit_test/modules/math/vector/: arithmetic.cpp  comparison.cpp  utility.cpp
src/unit_test/modules/simulation/: moon.cpp  simulator.cpp  sun.cpp
src/unit_test/modules/unit/: quantity.cpp
src/unit_test/modules/unit/quantity/: arithmetic.cpp  comparison.cpp  stream.cpp  trigonometry.cpp
